--- a/src/index.html
+++ b/src/index.html
@@ -1,14 +1,33 @@
 <!DOCTYPE html>
 <html lang="ru">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Page title</title>
-    <link rel="stylesheet" href="./sass/index.scss" />
-    <script type="module" src="./index.js"></script>
-  </head>
-  <body>
-    <!-- ❗️❗️❗️ Add partials like so for every page -->
-    <include src="./partials/example.html"></include>
-  </body>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Page title</title>
+  <link rel="stylesheet" href="./sass/index.scss" />
+  <script type="module" src="./index.js"></script>
+</head>
+
+<body>
+  <div class="container">
+    <div class="section-search-form">
+      <form class="search-form" id="search-form">
+        <input class="search-input" type="text" name="searchQuery" autocomplete="off" placeholder="Search images..." />
+        <button class="search-btn" type="submit">Search</button>
+      </form>
+    </div>
+
+
+    <div class="gallery"></div>
+
+    <div class="load-more-container">
+      <button type="button" class="load-more is-hidden">Load more</button>
+      <p class="no-more-imges-text is-hidden">
+        We're sorry, but you've reached the end of search results.
+      </p>
+    </div>
+  </div>
+</body>
+
 </html>
